--- a/content_editable.html
+++ b/content_editable.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+  
   <body>
-    <div contentEditable="true">
-      This text can be edited by the user.
-    </div>
+    <article id="content1" contenteditable="true">
+      <p>Cookie muffin croissant. Faworki danish biscuit. Jujubes powder cookie cake biscuit halvah halvah. Biscuit gummies jelly
+        biscuit.</p>
+      <p>Sweet roll tiramisu chocolate bar sugar plum caramels tootsie roll caramels. Chocolate cake wypas cotton candy icing. Applicake
+        sesame snaps liquorice pastry croissant caramels fruitcake gingerbread biscuit. Donut toffee candy canes.</p>
+    </article>
   </body>
+
 </html>
